src/unnamedLanguageParser.java
// $ANTLR 3.5.2 src\\unnamedLanguage.g 2020-03-29 18:58:52

import AST.*;
import AST.Expressions.*;
import AST.Statements.*;
import AST.Types.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class unnamedLanguageParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDOP", "ASSIGNOP", "BOOLLIT", 
		"BOOLTYPE", "CHARLIT", "CHARTYPE", "CLOSEBRACE", "CLOSEBRACKET", "CLOSEPAREN", 
		"COMMA", "COMMENT", "ELSE", "EQUALITYOP", "FLOATLIT", "FLOATTYPE", "ID", 
		"IF", "INTLIT", "INTTYPE", "LESSTHANOP", "MULTOP", "OPENBRACE", "OPENBRACKET", 
		"OPENPAREN", "PRINT", "PRINTLN", "RETURN", "SEMICOLON", "STRLIT", "STRTYPE", 
		"SUBOP", "VOIDTYPE", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int ADDOP=4;
	public static final int ASSIGNOP=5;
	public static final int BOOLLIT=6;
	public static final int BOOLTYPE=7;
	public static final int CHARLIT=8;
	public static final int CHARTYPE=9;
	public static final int CLOSEBRACE=10;
	public static final int CLOSEBRACKET=11;
	public static final int CLOSEPAREN=12;
	public static final int COMMA=13;
	public static final int COMMENT=14;
	public static final int ELSE=15;
	public static final int EQUALITYOP=16;
	public static final int FLOATLIT=17;
	public static final int FLOATTYPE=18;
	public static final int ID=19;
	public static final int IF=20;
	public static final int INTLIT=21;
	public static final int INTTYPE=22;
	public static final int LESSTHANOP=23;
	public static final int MULTOP=24;
	public static final int OPENBRACE=25;
	public static final int OPENBRACKET=26;
	public static final int OPENPAREN=27;
	public static final int PRINT=28;
	public static final int PRINTLN=29;
	public static final int RETURN=30;
	public static final int SEMICOLON=31;
	public static final int STRLIT=32;
	public static final int STRTYPE=33;
	public static final int SUBOP=34;
	public static final int VOIDTYPE=35;
	public static final int WHILE=36;
	public static final int WS=37;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public unnamedLanguageParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public unnamedLanguageParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return unnamedLanguageParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src\\unnamedLanguage.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}



	// $ANTLR start "program"
	// src\\unnamedLanguage.g:44:1: program returns [Program p] : (f= function )+ EOF ;
	public final Program program() throws RecognitionException {
		Program p = null;


		Function f =null;


			p = new Program();

		try {
			// src\\unnamedLanguage.g:49:5: ( (f= function )+ EOF )
			// src\\unnamedLanguage.g:49:7: (f= function )+ EOF
			{
			// src\\unnamedLanguage.g:49:7: (f= function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==BOOLTYPE||LA1_0==CHARTYPE||LA1_0==FLOATTYPE||LA1_0==INTTYPE||LA1_0==STRTYPE||LA1_0==VOIDTYPE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// src\\unnamedLanguage.g:49:8: f= function
					{
					pushFollow(FOLLOW_function_in_program75);
					f=function();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) {p.addFunction(f);}
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return p;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_program81); if (state.failed) return p;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// src\\unnamedLanguage.g:52:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
	public final Function function() throws RecognitionException {
		Function f = null;


		FunctionDeclaration fd =null;
		FunctionBody fb =null;

		try {
			// src\\unnamedLanguage.g:53:5: (fd= functionDecl fb= functionBody )
			// src\\unnamedLanguage.g:53:7: fd= functionDecl fb= functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function101);
			fd=functionDecl();
			state._fsp--;
			if (state.failed) return f;
			pushFollow(FOLLOW_functionBody_in_function105);
			fb=functionBody();
			state._fsp--;
			if (state.failed) return f;
			if ( state.backtracking==0 ) {f = new Function(fd,fb);}
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return f;
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// src\\unnamedLanguage.g:56:1: functionDecl returns [FunctionDeclaration fd] : p1= formalParameter OPENPAREN (p2= formalParameter ( COMMA pi= formalParameter )* )? CLOSEPAREN ;
	public final FunctionDeclaration functionDecl() throws RecognitionException {
		FunctionDeclaration fd = null;


		FormalParameter p1 =null;
		FormalParameter p2 =null;
		FormalParameter pi =null;

		try {
			// src\\unnamedLanguage.g:57:5: (p1= formalParameter OPENPAREN (p2= formalParameter ( COMMA pi= formalParameter )* )? CLOSEPAREN )
			// src\\unnamedLanguage.g:57:7: p1= formalParameter OPENPAREN (p2= formalParameter ( COMMA pi= formalParameter )* )? CLOSEPAREN
			{
			pushFollow(FOLLOW_formalParameter_in_functionDecl127);
			p1=formalParameter();
			state._fsp--;
			if (state.failed) return fd;
			if ( state.backtracking==0 ) {fd = new FunctionDeclaration(p1);}
			match(input,OPENPAREN,FOLLOW_OPENPAREN_in_functionDecl136); if (state.failed) return fd;
			// src\\unnamedLanguage.g:58:15: (p2= formalParameter ( COMMA pi= formalParameter )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==BOOLTYPE||LA3_0==CHARTYPE||LA3_0==FLOATTYPE||LA3_0==INTTYPE||LA3_0==STRTYPE||LA3_0==VOIDTYPE) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// src\\unnamedLanguage.g:58:16: p2= formalParameter ( COMMA pi= formalParameter )*
					{
					pushFollow(FOLLOW_formalParameter_in_functionDecl141);
					p2=formalParameter();
					state._fsp--;
					if (state.failed) return fd;
					if ( state.backtracking==0 ) {fd.addParameter(p2);}
					// src\\unnamedLanguage.g:58:57: ( COMMA pi= formalParameter )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==COMMA) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// src\\unnamedLanguage.g:58:58: COMMA pi= formalParameter
							{
							match(input,COMMA,FOLLOW_COMMA_in_functionDecl145); if (state.failed) return fd;
							pushFollow(FOLLOW_formalParameter_in_functionDecl149);
							pi=formalParameter();
							state._fsp--;
							if (state.failed) return fd;
							if ( state.backtracking==0 ) {fd.addParameter(pi);}
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			match(input,CLOSEPAREN,FOLLOW_CLOSEPAREN_in_functionDecl157); if (state.failed) return fd;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return fd;
	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParameter"
	// src\\unnamedLanguage.g:61:1: formalParameter returns [FormalParameter p] : c= compoundType id= identifier ;
	public final FormalParameter formalParameter() throws RecognitionException {
		FormalParameter p = null;


		Type c =null;
		Identifier id =null;

		try {
			// src\\unnamedLanguage.g:62:5: (c= compoundType id= identifier )
			// src\\unnamedLanguage.g:62:7: c= compoundType id= identifier
			{
			pushFollow(FOLLOW_compoundType_in_formalParameter177);
			c=compoundType();
			state._fsp--;
			if (state.failed) return p;
			pushFollow(FOLLOW_identifier_in_formalParameter181);
			id=identifier();
			state._fsp--;
			if (state.failed) return p;
			if ( state.backtracking==0 ) {p=new FormalParameter(c,id);}
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "formalParameter"



	// $ANTLR start "compoundType"
	// src\\unnamedLanguage.g:65:1: compoundType returns [Type t] : x= type ( OPENBRACKET sz= INTLIT CLOSEBRACKET )? ;
	public final Type compoundType() throws RecognitionException {
		Type t = null;


		Token sz=null;
		Type x =null;

		try {
			// src\\unnamedLanguage.g:66:5: (x= type ( OPENBRACKET sz= INTLIT CLOSEBRACKET )? )
			// src\\unnamedLanguage.g:66:7: x= type ( OPENBRACKET sz= INTLIT CLOSEBRACKET )?
			{
			pushFollow(FOLLOW_type_in_compoundType206);
			x=type();
			state._fsp--;
			if (state.failed) return t;
			if ( state.backtracking==0 ) {t=x;}
			// src\\unnamedLanguage.g:66:20: ( OPENBRACKET sz= INTLIT CLOSEBRACKET )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==OPENBRACKET) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// src\\unnamedLanguage.g:66:21: OPENBRACKET sz= INTLIT CLOSEBRACKET
					{
					match(input,OPENBRACKET,FOLLOW_OPENBRACKET_in_compoundType210); if (state.failed) return t;
					sz=(Token)match(input,INTLIT,FOLLOW_INTLIT_in_compoundType214); if (state.failed) return t;
					match(input,CLOSEBRACKET,FOLLOW_CLOSEBRACKET_in_compoundType216); if (state.failed) return t;
					if ( state.backtracking==0 ) {t=new ArrayType(new IntegerLiteral(Integer.valueOf(sz.getText()),(sz!=null?sz.getLine():0),(sz!=null?sz.getCharPositionInLine():0)),x);}
					}
					break;

			}

			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "compoundType"



	// $ANTLR start "functionBody"
	// src\\unnamedLanguage.g:69:1: functionBody returns [FunctionBody fb] : OPENBRACE (vd= variableDecl )* (s= statement )* CLOSEBRACE ;
	public final FunctionBody functionBody() throws RecognitionException {
		FunctionBody fb = null;


		VariableDeclaration vd =null;
		Statement s =null;

		try {
			// src\\unnamedLanguage.g:70:5: ( OPENBRACE (vd= variableDecl )* (s= statement )* CLOSEBRACE )
			// src\\unnamedLanguage.g:70:7: OPENBRACE (vd= variableDecl )* (s= statement )* CLOSEBRACE
			{
			match(input,OPENBRACE,FOLLOW_OPENBRACE_in_functionBody241); if (state.failed) return fb;
			if ( state.backtracking==0 ) {fb = new FunctionBody();}
			// src\\unnamedLanguage.g:71:5: (vd= variableDecl )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==BOOLTYPE||LA5_0==CHARTYPE||LA5_0==FLOATTYPE||LA5_0==INTTYPE||LA5_0==STRTYPE||LA5_0==VOIDTYPE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// src\\unnamedLanguage.g:71:6: vd= variableDecl
					{
					pushFollow(FOLLOW_variableDecl_in_functionBody252);
					vd=variableDecl();
					state._fsp--;
					if (state.failed) return fb;
					if ( state.backtracking==0 ) {fb.addVariableDeclaration(vd);}
					}
					break;

				default :
					break loop5;
				}
			}

			// src\\unnamedLanguage.g:71:57: (s= statement )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==BOOLLIT||LA6_0==CHARLIT||LA6_0==FLOATLIT||(LA6_0 >= ID && LA6_0 <= INTLIT)||(LA6_0 >= OPENPAREN && LA6_0 <= STRLIT)||LA6_0==WHILE) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// src\\unnamedLanguage.g:71:58: s= statement
					{
					pushFollow(FOLLOW_statement_in_functionBody261);
					s=statement();
					state._fsp--;
					if (state.failed) return fb;
					if ( state.backtracking==0 ) {fb.addStatement(s);}
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,CLOSEBRACE,FOLLOW_CLOSEBRACE_in_functionBody267); if (state.failed) return fb;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return fb;
	}
	// $ANTLR end "functionBody"



	// $ANTLR start "variableDecl"
	// src\\unnamedLanguage.g:74:1: variableDecl returns [VariableDeclaration vd] : c= compoundType id= identifier SEMICOLON ;
	public final VariableDeclaration variableDecl() throws RecognitionException {
		VariableDeclaration vd = null;


		Type c =null;
		Identifier id =null;

		try {
			// src\\unnamedLanguage.g:75:5: (c= compoundType id= identifier SEMICOLON )
			// src\\unnamedLanguage.g:75:7: c= compoundType id= identifier SEMICOLON
			{
			pushFollow(FOLLOW_compoundType_in_variableDecl287);
			c=compoundType();
			state._fsp--;
			if (state.failed) return vd;
			pushFollow(FOLLOW_identifier_in_variableDecl291);
			id=identifier();
			state._fsp--;
			if (state.failed) return vd;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_variableDecl293); if (state.failed) return vd;
			if ( state.backtracking==0 ) {vd = new VariableDeclaration(c,id);}
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return vd;
	}
	// $ANTLR end "variableDecl"



	// $ANTLR start "statement"
	// src\\unnamedLanguage.g:78:1: statement returns [Statement s] : (x= emptyStmt |x= expressionStmt |x= ifElseStmt |x= whileStmt |x= printStmt |x= printlnStmt |x= returnStmt |x= assignStmt |x= arrAssignStmt );
	public final Statement statement() throws RecognitionException {
		Statement s = null;


		Statement x =null;

		try {
			// src\\unnamedLanguage.g:79:10: (x= emptyStmt |x= expressionStmt |x= ifElseStmt |x= whileStmt |x= printStmt |x= printlnStmt |x= returnStmt |x= assignStmt |x= arrAssignStmt )
			int alt7=9;
			switch ( input.LA(1) ) {
			case SEMICOLON:
				{
				alt7=1;
				}
				break;
			case ID:
				{
				int LA7_2 = input.LA(2);
				if ( (synpred8_unnamedLanguage()) ) {
					alt7=2;
				}
				else if ( (synpred14_unnamedLanguage()) ) {
					alt7=8;
				}
				else if ( (true) ) {
					alt7=9;
				}

				}
				break;
			case BOOLLIT:
			case CHARLIT:
			case FLOATLIT:
			case INTLIT:
			case OPENPAREN:
			case STRLIT:
				{
				alt7=2;
				}
				break;
			case IF:
				{
				alt7=3;
				}
				break;
			case WHILE:
				{
				alt7=4;
				}
				break;
			case PRINT:
				{
				alt7=5;
				}
				break;
			case PRINTLN:
				{
				alt7=6;
				}
				break;
			case RETURN:
				{
				alt7=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// src\\unnamedLanguage.g:79:12: x= emptyStmt
					{
					pushFollow(FOLLOW_emptyStmt_in_statement323);
					x=emptyStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 2 :
					// src\\unnamedLanguage.g:80:12: x= expressionStmt
					{
					pushFollow(FOLLOW_expressionStmt_in_statement340);
					x=expressionStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 3 :
					// src\\unnamedLanguage.g:81:12: x= ifElseStmt
					{
					pushFollow(FOLLOW_ifElseStmt_in_statement357);
					x=ifElseStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 4 :
					// src\\unnamedLanguage.g:82:12: x= whileStmt
					{
					pushFollow(FOLLOW_whileStmt_in_statement374);
					x=whileStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 5 :
					// src\\unnamedLanguage.g:83:12: x= printStmt
					{
					pushFollow(FOLLOW_printStmt_in_statement391);
					x=printStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 6 :
					// src\\unnamedLanguage.g:84:12: x= printlnStmt
					{
					pushFollow(FOLLOW_printlnStmt_in_statement408);
					x=printlnStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 7 :
					// src\\unnamedLanguage.g:85:12: x= returnStmt
					{
					pushFollow(FOLLOW_returnStmt_in_statement425);
					x=returnStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 8 :
					// src\\unnamedLanguage.g:86:12: x= assignStmt
					{
					pushFollow(FOLLOW_assignStmt_in_statement442);
					x=assignStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;
				case 9 :
					// src\\unnamedLanguage.g:87:12: x= arrAssignStmt
					{
					pushFollow(FOLLOW_arrAssignStmt_in_statement459);
					x=arrAssignStmt();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s=x;}
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "statement"



	// $ANTLR start "emptyStmt"
	// src\\unnamedLanguage.g:90:1: emptyStmt returns [Statement s] : SEMICOLON ;
	public final Statement emptyStmt() throws RecognitionException {
		Statement s = null;


		try {
			// src\\unnamedLanguage.g:91:5: ( SEMICOLON )
			// src\\unnamedLanguage.g:91:7: SEMICOLON
			{
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_emptyStmt482); if (state.failed) return s;
			if ( state.backtracking==0 ) {s= new EmptyStatement();}
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "emptyStmt"



	// $ANTLR start "expressionStmt"
	// src\\unnamedLanguage.g:94:1: expressionStmt returns [Statement s] : e= expression SEMICOLON ;
	public final Statement expressionStmt() throws RecognitionException {
		Statement s = null;


		Expression e =null;

		try {
			// src\\unnamedLanguage.g:95:5: (e= expression SEMICOLON )
			// src\\unnamedLanguage.g:95:7: e= expression SEMICOLON
			{
			pushFollow(FOLLOW_expression_in_expressionStmt508);
			e=expression();
			state._fsp--;
			if (state.failed) return s;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_expressionStmt510); if (state.failed) return s;
			if ( state.backtracking==0 ) {s = new ExpressionStatement(e);}
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "expressionStmt"



	// $ANTLR start "ifElseStmt"
	// src\\unnamedLanguage.g:98:1: ifElseStmt returns [IfElseStatement s] : IF OPENPAREN e= expression CLOSEPAREN b= block ( ELSE b2= block )? ;
	public final IfElseStatement ifElseStmt() throws RecognitionException {
		IfElseStatement s = null;


		Expression e =null;
		Block b =null;
		Block b2 =null;

		try {
			// src\\unnamedLanguage.g:99:5: ( IF OPENPAREN e= expression CLOSEPAREN b= block ( ELSE b2= block )? )
			// src\\unnamedLanguage.g:99:7: IF OPENPAREN e= expression CLOSEPAREN b= block ( ELSE b2= block )?
			{
			match(input,IF,FOLLOW_IF_in_ifElseStmt533); if (state.failed) return s;
			match(input,OPENPAREN,FOLLOW_OPENPAREN_in_ifElseStmt535); if (state.failed) return s;
			pushFollow(FOLLOW_expression_in_ifElseStmt539);
			e=expression();
			state._fsp--;
			if (state.failed) return s;
			match(input,CLOSEPAREN,FOLLOW_CLOSEPAREN_in_ifElseStmt541); if (state.failed) return s;
			pushFollow(FOLLOW_block_in_ifElseStmt545);
			b=block();
			state._fsp--;
			if (state.failed) return s;
			if ( state.backtracking==0 ) {s= new IfElseStatement(e,b);}
			// src\\unnamedLanguage.g:100:5: ( ELSE b2= block )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==ELSE) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// src\\unnamedLanguage.g:100:6: ELSE b2= block
					{
					match(input,ELSE,FOLLOW_ELSE_in_ifElseStmt554); if (state.failed) return s;
					pushFollow(FOLLOW_block_in_ifElseStmt558);
					b2=block();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s.setElseBlock(b2);}
					}
					break;

			}

			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "ifElseStmt"



	// $ANTLR start "whileStmt"
	// src\\unnamedLanguage.g:103:1: whileStmt returns [Statement s] : WHILE OPENPAREN e= expression CLOSEPAREN b= block ;
	public final Statement whileStmt() throws RecognitionException {
		Statement s = null;


		Expression e =null;
		Block b =null;
